--- a/settings.gradle
+++ b/settings.gradle
@@ -15,3 +15,4 @@ dependencyResolutionManagement {
 rootProject.name = "EditTextValidator"
 include ':app'
 include ':edit-text-validator'
+include ':Library'
